charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: docker.io/owncloud/server:10.6
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: owncloud-data
          mountPath: /mnt/data
      volumes:
      - name: owncloud-data
        persistentVolumeClaim:
          claimName: owncloud-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
        ports:
        - containerPort: 5432
