charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: owncloud.doianov.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud-service
                port:
                  number: 8080
  tls:
    - hosts:
        - owncloud.doianov.me
      secretName: my-tls-secret
